# diesel-ease

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
diesel-ease-macros/: Cargo.toml
diesel-ease-macros/src/: lib.rs
examples/cli-post/: README.md  cli.rs  main.rs  models.rs  schema.rs
src/: lib.rs
