[package]
author = "KR Shanto"
name = "diesel-ease"
version = "0.1.0"
edition = "2021"
description = "A proc macro that generates useful functions for database operations that uses diesel.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Shanto2005/diesel-ease/"
homepage = "https://github.com/Shanto2005/diesel-ease/"
readme = "README.md"
documentation = "https://docs.rs/diesel-ease"
keywords = ["database", "diesel"]
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.95", features = ["full", "extra-traits"] }
quote = "1.0.18"

[dev-dependencies]
clap = {version="3.1.18", features=["derive"]}
diesel = {version="1.4.8", features=["postgres"]}
dotenv = "*"
colored = "*"